syntax = "proto3";

package tweet;

// import "google/protobuf/struct.proto";
// import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/levinhne/cryptotweet.io/tweet/protobuf;tweet";

service TweetService {
	rpc Create (CreateTweetRequest) returns (CreateTweetResponse) {}
    rpc Update (UpdateTweetRequest) returns (UpdateTweetResponse) {}
}

message TranslateText {
    string vietnamese = 1;
    string russian = 2;
}

message Entity {
    repeated uint32 indices = 1; 
    string text = 2;
    string url = 3;
    string display_url = 4;
    string expanded_url = 5;
}

message Entities {
    repeated Entity hashtags = 1;
    repeated Entity symbols = 2;
    repeated Entity media = 3;
    repeated Entity urls = 4;
    repeated Entity user_mentions = 5;
}

message Photo {
    int32 width = 1;
    int32 height = 2;
    string url = 3;
    string expanded_url = 4;
}

message Tweet {
    string id = 1;
    string tweet_id = 2;
    string twitter_profile_id = 3;
    string text = 4;
    TranslateText translate_text = 10;
	int32 favorite_count = 5;
    int32 conversation_count = 6;
    
    string lang = 16;
    Tweet parent = 17;
	repeated Photo photos = 18;
	Entities entities = 19;
    string in_reply_to_screen_name = 20;
    string in_reply_to_status_id_str = 21;
    string in_reply_to_user_id_str = 22;
   
    google.protobuf.Timestamp tweeted_at = 7;
	google.protobuf.Timestamp published_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message CreateTweetRequest {
	string id = 1;
    string tweet_id = 2;
    string twitter_profile_id = 3;
    string text = 4;
    TranslateText translate_text = 10;
	int32 favorite_count = 5;
    int32 conversation_count = 6;
    repeated uint32 hashtags = 15;
    
    string lang = 16;
    Tweet parent = 17;
	repeated Photo photos = 18;
	Entities entities = 19;
    string in_reply_to_screen_name = 20;
    string in_reply_to_status_id_str = 21;
    string in_reply_to_user_id_str = 22;
   
    google.protobuf.Timestamp tweeted_at = 7;
	google.protobuf.Timestamp published_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message CreateTweetResponse {
	Tweet data = 1;
}

message UpdateTweetRequest {
    string id = 1;
    string tweet_id = 2;
    string twitter_profile_id = 3;
    string text = 4;
    TranslateText translate_text = 10;
	int32 favorite_count = 5;
    int32 conversation_count = 6;
    repeated uint32 hashtags = 15;
    
    string lang = 16;
    Tweet parent = 17;
	repeated Photo photos = 18;
	Entities entities = 19;
    string in_reply_to_screen_name = 20;
    string in_reply_to_status_id_str = 21;
    string in_reply_to_user_id_str = 22;
   
    google.protobuf.Timestamp tweeted_at = 7;
	google.protobuf.Timestamp published_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message UpdateTweetResponse {
    string id = 1;
}